--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,22 +5,23 @@ html{
     background-color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
+    text-align: center;
 }
 
 
 /* HEADER */
 
-header{
+.header-main{
     text-align: center;
 }
 
-header h1 {
+.header-main{
     font-size: 50px;
     font-weight: normal;
 
 }
 
-header a {
+.link-cta {
     font-size: 1rem;
     text-align: center;
     color: aquamarine;
